--- a/app/Resources/views/Back/update.html.twig
+++ b/app/Resources/views/Back/update.html.twig
@@ -5,12 +5,17 @@
 {% endblock %}
 
 {% block body %}
+<h4>Modification de l'article: {{ article.title }}</h4>
 
-    {% for article in articlesList %}
-<div class="col-sm-12">
-    <p>{{ article.title }}</p>
-    <br/>
-</div>
-    {% endfor %}
+    {{ include('formTinyMCE.html.twig') }}
+
+
+    <div class="col-sm-12">
+        <a href="{{ path('index_back') }}" class="btn btn-info pull-right">
+            <i class="glyphicon glyphicon-eye-open"></i>
+            Retour à la liste des articles
+        </a>
+    </div>
+
 
 {% endblock %}
