--- a/app/Resources/views/Front/article.html.twig
+++ b/app/Resources/views/Front/article.html.twig
@@ -1,9 +1,22 @@
-{% extends 'base.html.twig' %}{% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block lateral %}
     {{ include('frontLateral.html.twig') }}
 {% endblock %}
 
 {% block body %}
-    <div>article</div>
+    <div class="col-sm-12 article_case">
+        <div class="col-sm-12">
+            <h3 class="col-sm-8">{{ article.title }}</h3>
+            <div class="pull-right">Publié le: {{ article.publishedDate|date('d-m-Y') }}</div>
+        </div>
+        <div>{{ article.content|raw }}</div>
+        <br>
+        <a href="{{ path('home_page') }}" class="btn btn-info pull-right">
+            <i class="glyphicon glyphicon-home"></i>
+            Retour à la liste des articles
+        </a>
+    </div>
+    <br>
+
 {% endblock %}
