creation securité, début créa commentaire -> retrait temporaire variable $updated_date suite à probleme avec doctrine

--- a/app/Resources/views/Front/article.html.twig
+++ b/app/Resources/views/Front/article.html.twig
@@ -11,6 +11,7 @@
             <div class="pull-right">Publié le: {{ article.publishedDate|date('d-m-Y') }}</div>
         </div>
         <div>{{ article.content|raw }}</div>
+        <button></button>
         <br>
         <a href="{{ path('home_page') }}" class="btn btn-info pull-right">
             <i class="glyphicon glyphicon-home"></i>
