--- a/app/Resources/views/backLateral.html.twig
+++ b/app/Resources/views/backLateral.html.twig
@@ -16,6 +16,7 @@
                 <li><a href="{{ path('add') }}">Ajouter un nouvel article</a></li>
                 {#<li><a href="{{ path('update') }}">Modifier un article</a></li>#}
                 <li><a href="{{ path('moderate') }}">Modérer les commentaires</a></li>
+                <li><a href="{{ path('logout') }}">Se déconnecter</a></li>
             </ul>
         </div>
     </div>
