--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -74,7 +74,7 @@
             <a href="">Crédits</a>
         </div>
         <div class="col-sm-2" id="administration">
-            <a href="">Administration</a>
+            <a href="{{ path('login') }}">Administration</a>
         </div>
     </div>
 </footer>
