Rétablissement des noms de fichiers et de variables dans la norme de langage internationale.

--- a/app/Resources/views/Article_management/update.html.twig
+++ b/app/Resources/views/Article_management/update.html.twig
@@ -7,19 +7,19 @@
 {% block body %}
 <h4>Modification de l'article: {{ article.title }}</h4>
 
-    {{ include(':Gestion_Article:formTinyMCEPreRempli.html.twig') }}
+    {{ include(':Article_management:formTinyMCEPreRempli.html.twig') }}
         
         <div class="col-sm-12">
             <input type="button" data-toggle="modal" data-target="#myModal" value="Mettre à jour"
                 class="btn btn-default pull-right"/>
         </div>
 
-        {{ include('modaleUpdate.html.twig') }}
+        {{ include('modalUpdate.html.twig') }}
 
     {{ form_end(formView) }}
 
     <div class="col-sm-12">
-        <a href="{{ path('auteur_home_page') }}" class="btn btn-info pull-right">
+        <a href="{{ path('author_home_page') }}" class="btn btn-info pull-right">
             <i class="glyphicon glyphicon-eye-open"></i>
             Retour à la liste des articles
         </a>
