--- a/app/Resources/views/Create_Article/add.html.twig
+++ b/app/Resources/views/Create_Article/add.html.twig
@@ -17,13 +17,13 @@
     </div>
 
 
-    {{ include(':Creation_Article:formTinyMCEEmpty.html.twig') }}
+    {{ include(':Create_Article:formTinyMCEEmpty.html.twig') }}
 
         <div class="col-sm-12">
             <input type="button" data-toggle="modal" data-target="#myModal" value="Publier"
                    class="btn btn-default pull-right"/>
         </div>
-        {{ include(':Creation_Article:modalePublier.html.twig') }}
+        {{ include(':Create_Article:modalPublish.html.twig') }}
         <div class="col-sm-12">
             <input id="publish" type="submit" name="submitAction" value="Enregistrer" class="btn btn-primary pull-right"/>
         </div>
