--- a/app/Resources/views/Home/index.html.twig
+++ b/app/Resources/views/Home/index.html.twig
@@ -18,7 +18,7 @@
                 {% endautoescape %}
             </div>
 
-            <a href="{{ path('visu_article', {'id': article.id}) }}" class="btn btn-info pull-right">
+            <a href="{{ path('visualization_article', {'id': article.id}) }}" class="btn btn-info pull-right">
                 <i class="glyphicon glyphicon-eye-open"></i>
                 Lire la suite...
             </a>
