--- a/app/Resources/views/Author_home_page/index_author_home.html.twig
+++ b/app/Resources/views/Author_home_page/index_author_home.html.twig
@@ -1,8 +1,8 @@
 {% extends 'baseBlog.html.twig' %}
 
-{% block lateral %}
-    {{ include('backLateral.html.twig') }}
-{% endblock %}
+{#{% block lateral %}#}
+    {#{{ include('backLateral.html.twig') }}#}
+{#{% endblock %}#}
 
 {% block body %}
 
