--- a/app/Resources/views/backLateral.html.twig
+++ b/app/Resources/views/backLateral.html.twig
@@ -12,9 +12,11 @@
 
         <div class="collapse navbar-collapse" id="menu-navbar-collapse">
             <ul class="nav nav-pills nav-stacked">
-                <li><a href="{{ path('auteur_home_page') }}">Gérer les articles <span class="badge">1</span></a></li>
+                {#<li><a href="{{ path('author_home_page') }}">Gérer les articles <span class="badge">{{ numberOfPublished }}</span></a></li>#}
+                <li><a href="{{ path('author_home_page') }}">Gérer les articles <span class="badge">en attente</span></a></li>
                 <li><a href="{{ path('add') }}">Ajouter un nouvel article</a></li>
-                <li><a href="{{ path('brouillons') }}">Gérer les brouillons <span class="badge">2</span></a></li>
+                {#<li><a href="{{ path('drafts') }}">Gérer les brouillons <span class="badge">{{ numberOfUnpublished }}</span></a></li>#}
+                <li><a href="{{ path('drafts') }}">Gérer les brouillons <span class="badge">en attente</span></a></li>
                 <li><a href="{{ path('moderate') }}">Modérer les commentaires</a></li>
                 <li><a href="{{ path('logout') }}">Se déconnecter</a></li>
             </ul>
