--- a/app/Resources/views/baseBlog.html.twig
+++ b/app/Resources/views/baseBlog.html.twig
@@ -43,8 +43,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="{{ path('home_page') }}">Accueil<span
                                         class="sr-only">(current)</span></a></li>
-                        <li><a href="{{ path('contact') }}">L'Auteur</a></li>
-                        <li><a href="{{ path('auteur') }}">Contact</a></li>
+                        <li><a href="{{ path('author') }}">L'Auteur</a></li>
+                        <li><a href="{{ path('contact') }}">Contact</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -52,8 +52,16 @@
     </div>
 
     <div class="col-sm-3" id="lateral_bar">
-        {% block lateral %}
-        {% endblock %}
+        {% if is_granted('IS_AUTHENTICATED_FULLY') and is_granted('ROLE_AUTHOR') %}
+            {#{{ render(controller('AppBundle:BackLateral:getNumberOfArticles')) }}#}
+            {{ include('backLateral.html.twig') }}
+        {% else %}
+            {{ include('blogLateral.html.twig') }}
+
+        {% endif %}
+        {#{% block lateral %}#}
+        {#{% endblock %}#}
+
     </div>
     <div class="col-sm-9" id="content">
         {% block body %}
@@ -70,7 +78,7 @@
 <footer>
     <div class="row" id="footer">
         <div class="col-sm-offset-8 col-sm-2" id="credits">
-            <a href="">Crédits</a>
+            <a href="#">Crédits</a>
         </div>
         <div class="col-sm-2" id="administration">
             <a href="{{ path('login') }}">Administration</a>
