--- a/app/Resources/views/Comments/addComment.html.twig
+++ b/app/Resources/views/Comments/addComment.html.twig
@@ -1,2 +1,32 @@
+<div class="comment_form">
+    {{ form_start(formView, {'attr': {'class': 'form-horizontal', 'novalidate':'novalidate'}}) }}
 
+    <div class="form-group">
+        <div class="col-sm-12">
+            {{ form_errors(formView.author) }}
+        </div>
+
+        {{ form_label(formView.author, "Votre nom ou pseudo", {'label_attr': {'for':'author_label'}}) }}
+
+        <div class="col-sm-12">
+            {{ form_widget(formView.author, {'attr': {'class': 'form-control', 'id':'author_label', 'placeholder':'Saisissez votre nom ou pseudo' }}) }}
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-12">
+            {{ form_errors(formView.content) }}
+        </div>
+
+        {{ form_label(formView.content, "Commentaire", {'label_attr': {'for':'comment_label'}}) }}
+
+        <div class="col-sm-12">
+            {{ form_widget(formView.content, {'attr': {'class': 'form-control', 'id':'comment_label', 'placeholder':'Saisissez votre commentaire' }}) }}
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <input id="publish" type="submit" value="Publier" class="btn btn-primary pull-right"/>
+    </div>
+
+    {{ form_end(formView) }}
+</div>
 
