suite insertion commentaires

--- a/app/Resources/views/Article_management/modalUpdate.html.twig
+++ b/app/Resources/views/Article_management/modalUpdate.html.twig
@@ -11,8 +11,8 @@
                 Vous êtes sur le point de mettre à jour cet article, veuillez confirmer votre choix.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                <input id="publish" type="submit" value="Mettre à jour" class="btn btn-primary pull-right"/>
+                <button type="button" class="btn btn-edit" data-dismiss="modal">Annuler</button>
+                <input id="publish" type="submit" value="Mettre à jour" class="btn btn-next pull-right"/>
             </div>
         </div>
     </div>
