--- a/app/Resources/views/Create_Article/add.html.twig
+++ b/app/Resources/views/Create_Article/add.html.twig
@@ -6,6 +6,10 @@
 
 {% block body %}
 
+    <h1 class="col-md-12 text-center pages_titles">Rédiger un nouveau chapitre</h1>
+
+    {{ include(':Create_Article:formTinyMCEEmpty.html.twig') }}
+
     <div class="col-md-12">
         {% for type, flash_messages in app.session.flashBag.all %}
             {% for flash_message in flash_messages %}
@@ -16,17 +20,16 @@
         {% endfor %}
     </div>
 
-
-    {{ include(':Create_Article:formTinyMCEEmpty.html.twig') }}
-
-        <div class="col-sm-12">
-            <input type="button" data-toggle="modal" data-target="#myModal" value="Publier"
-                   class="btn btn-default pull-right"/>
-        </div>
-        {{ include(':Create_Article:modalPublish.html.twig') }}
-        <div class="col-sm-12">
-            <input id="publish" type="submit" name="submitAction" value="Enregistrer" class="btn btn-primary pull-right"/>
-        </div>
+    <div class="col-sm-12">
+    {#<div class="col-sm-6">#}
+        <input type="button" data-toggle="modal" data-target="#myModal" value="Publier"
+               class="btn btn-status pull-right"/>
+    {#</div>#}
+    {{ include(':Create_Article:modalPublish.html.twig') }}
+    {#<div class="col-sm-6">#}
+        <input id="publish" type="submit" name="submitAction" value="Enregistrer" class="btn btn-edit pull-right"/>
+    {#</div>#}
+    </div>
     {{ form_end(formView) }}
 
 
