--- a/app/Resources/views/Article_reading/article.html.twig
+++ b/app/Resources/views/Article_reading/article.html.twig
@@ -2,55 +2,47 @@
 
 {% import ':Article_reading/Macro:recursiveComments.html.twig' as macro %}
 
-{% block lateral %}
-    {{ include('blogLateral.html.twig') }}
+{% block stylesheetsChildren %}
+    <link rel="stylesheet" href="{{ asset('css/articleVisualization.css') }}"/>
 {% endblock %}
 
 {% block body %}
     <div class="col-sm-12 article_case">
-        <div class="col-sm-12">
-            <h3 class="col-sm-8">{{ article.title }}</h3>
-            <div class="pull-right">Publié le: {{ article.createdDate|date('d-m-Y') }}</div>
+
+        <h1 class="col-sm-8 pages_titles">{{ article.title }}</h1>
+        <div class="pull-right">Publié le: {{ article.createdDate|date('d-m-Y') }}</div>
+
+        <div class="col-sm-12">{{ article.content|raw }}</div>
+        <div class="col-sm-12 buttons">
+            <a href="{{ path('home_page') }}" class="btn btn-edit pull-right">
+                <i class="glyphicon glyphicon-home"></i>
+                Retour à la liste des articles
+            </a>
+            <button class="btn btn-status pull-right" id="add_comment"><i class="glyphicon glyphicon-pencil"></i> Commenter ce chapitre
+            </button>
         </div>
-        <div>{{ article.content|raw }}</div>
-        <a href="{{ path('home_page') }}" class="btn btn-info pull-right">
-            <i class="glyphicon glyphicon-home"></i>
-            Retour à la liste des articles
-        </a>
-        <a href="#" class="btn btn-success pull-right">
-            Chapitre suivant
-            <i class="glyphicon glyphicon-chevron-right"></i>
-        </a>
-        <a href="#" class="btn btn-warning pull-right">
-            <i class="glyphicon glyphicon-chevron-left"></i>
-            Chapitre précédent
-        </a>
-        <button class="btn btn-primary pull-right"><i class="glyphicon glyphicon-pencil"></i> Commenter ce chapitre</button>
     </div>
-    <div>
+    <div class="col-sm-12" id="comment_title">
+        <h3 class="pages_titles">Commentaires des lecteurs</h3>
+        {% if commentError is not empty %}
+            <div class="col-sm-offset-1">{{ commentError }}</div>
+        {% endif %}
+    </div>
+    <div id="comment_field">
         {{ include(':Comments:addComment.html.twig') }}
     </div>
     <div>
-        {{ macro.recursiveComments(comments) }}
-
-
-
-
-
-
-
-
-
-
-        {#{% for comment in comments %}#}
-            {#<div>#}
-                {#<p>{{ comment.author }}</p>#}
-                {#<p>Publié le: {{ comment.publishedDate|date('d-m-Y') }}</p>#}
-                {#<p>{{ comment.content }}</p>#}
-                {#<a href="{{ path('signal', {'id': comment.id}) }}" class="btn btn-warning">signaler ce commentaire</a>#}
-            {#</div>#}
-        {#{% endfor %}#}
+        {{ macro.recursiveComments(comments, 1) }}
     </div>
-
 {% endblock %}
+{% block javascripts %}
 
+    <script src="{{ asset('js/showCommentForm.js') }}"></script>
+    {#<script>#}
+        {#$(document).ready(function(){#}
+            {#$('#comment_reply').click(function() {#}
+                {#$('#comment_field').clone([true]).appendTo($('#comment_reply'));#}
+            {#})#}
+        {#});#}
+{#//    </script>#}
+{% endblock %}
