--- a/app/Resources/views/Author_home_page/index_author_home.html.twig
+++ b/app/Resources/views/Author_home_page/index_author_home.html.twig
@@ -1,9 +1,5 @@
 {% extends 'baseBlog.html.twig' %}
 
-{#{% block lateral %}#}
-    {#{{ include('backLateral.html.twig') }}#}
-{#{% endblock %}#}
-
 {% block body %}
 
     {% for article in articlesList %}
@@ -12,15 +8,15 @@
                 {{ article.title }}
             </h4>
             <div class="col-sm-4">
-                <a href="{{ path('delete', {'id': article.id}) }}" class="btn btn-danger pull-right"
-                   data-toggle="tooltip" data-placement="right" title="Supprimer l'article">
-                    <i class="glyphicon glyphicon-trash"></i>
-                </a>
-                <a href="{{ path('update', {'id': article.id}) }}" class="btn btn-info pull-right" data-toggle="tooltip"
+                <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-delete pull-right"><a
+                            data-toggle="tooltip" data-placement="right" title="Supprimer l'article"> </a><i
+                            class="glyphicon glyphicon-trash"></i></button>
+                {{ include(':Author_home_page:modalDelete.html.twig') }}
+                <a href="{{ path('update', {'id': article.id}) }}" class="btn btn-edit pull-right" data-toggle="tooltip"
                    data-placement="top" title="Editer l'article">
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
-                <a href="{{ path('unpublish', {'id': article.id}) }}" class="btn btn-warning pull-right"
+                <a href="{{ path('unpublish', {'id': article.id}) }}" class="btn btn-status pull-right"
                    data-toggle="tooltip" data-placement="left" title="Retirer l'article de la publication">
                     <i class="glyphicon glyphicon-ban-circle"></i>
                 </a>
