--- a/app/Resources/views/Author_home_page/modalDelete.html.twig
+++ b/app/Resources/views/Author_home_page/modalDelete.html.twig
@@ -5,14 +5,17 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Confirmation de publication</h4>
+                <h4 class="modal-title" id="myModalLabel">Confirmation de suppression</h4>
             </div>
             <div class="modal-body">
-                Vous êtes sur le point de publier cet article, veuillez confirmer votre choix.
+                Vous êtes sur le point de supprimer ce chapitre, veuillez confirmer votre choix.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-edit" data-dismiss="modal">Annuler</button>
-                <input id="publish" type="submit" name="submitAction" value="Publier" class="btn btn-next pull-right"/>
+                <button type="button" class="btn btn-return" data-dismiss="modal">Annuler</button>
+                <a href="{{ path('delete', {'id': article.id}) }}" class="btn btn-delete pull-right"
+                    title="Supprimer l'article">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
             </div>
         </div>
     </div>
