--- a/app/Resources/views/Comments/addComment.html.twig
+++ b/app/Resources/views/Comments/addComment.html.twig
@@ -23,8 +23,9 @@
             {{ form_widget(formView.content, {'attr': {'class': 'form-control', 'id':'comment_label', 'placeholder':'Saisissez votre commentaire' }}) }}
         </div>
     </div>
-    <div class="col-sm-12">
-        <input id="publish" type="submit" value="Publier" class="btn btn-primary pull-right"/>
+    <div class="col-sm-12" id="comment_buttons">
+        <a id="publish_comment" href="{{ path('add_comment', {'id': article.id}) }}" type="submit" class="btn btn-return pull-right">Publier</a>
+        <input id="cancel_comment" type="button" value="Annuler" class="btn btn-status pull-right"/>
     </div>
 
     {{ form_end(formView) }}
