--- a/app/Resources/views/Draft_copy/draft.html.twig
+++ b/app/Resources/views/Draft_copy/draft.html.twig
@@ -12,15 +12,15 @@
                 {{ article.title }}
             </h4>
             <div class="col-sm-4">
-                <a href="{{ path('delete', {'id': article.id}) }}" class="btn btn-danger pull-right"
-                   data-toggle="tooltip" data-placement="right" title="Supprimer l'article">
-                    <i class="glyphicon glyphicon-trash"></i>
-                </a>
-                <a href="{{ path('update', {'id': article.id}) }}" class="btn btn-info pull-right" data-toggle="tooltip"
+                <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-delete pull-right"><a
+                            data-toggle="tooltip" data-placement="right" title="Supprimer l'article"> </a><i
+                            class="glyphicon glyphicon-trash"></i></button>
+                {{ include(':Author_home_page:modalDelete.html.twig') }}
+                <a href="{{ path('update', {'id': article.id}) }}" class="btn btn-edit pull-right" data-toggle="tooltip"
                    data-placement="top" title="Editer l'article">
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
-                <a href="{{ path('publish', {'id': article.id}) }}" class="btn btn-success pull-right"
+                <a href="{{ path('publish', {'id': article.id}) }}" class="btn btn-status pull-right"
                    data-toggle="tooltip" data-placement="left" title="Publier l'article">
                     <i class="glyphicon glyphicon-check"></i>
                 </a>
