--- a/app/Resources/views/Home/index.html.twig
+++ b/app/Resources/views/Home/index.html.twig
@@ -1,9 +1,5 @@
 {% extends 'baseBlog.html.twig' %}
 
-{#{% block lateral %}#}
-    {#{{ include('blogLateral.html.twig') }}#}
-{#{% endblock %}#}
-
 {% block body %}
 
     {% for article in articlesList %}
@@ -12,13 +8,13 @@
                 <h3 class="col-sm-8">{{ article.title }}</h3>
                 <div class="pull-right">Publié le: {{ article.createdDate|date('d-m-Y') }}</div>
             </div>
-            <div>
+            <div class="col-sm-12">
                 {% autoescape %}
                     <p>{{ article.content|truncate(150)|raw }}</p>
                 {% endautoescape %}
             </div>
 
-            <a href="{{ path('visualization_article', {'id': article.id}) }}" class="btn btn-info pull-right">
+            <a href="{{ path('visualization_article', {'id': article.id}) }}" class="btn btn-next pull-right">
                 <i class="glyphicon glyphicon-eye-open"></i>
                 Lire la suite...
             </a>
