--- a/app/Resources/views/Login/login.html.twig
+++ b/app/Resources/views/Login/login.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="col-sm-9">
-        <h3 class="well">Cet espace est réservé à l'auteur, merci de vous identifier.</h3>
+        <h3 class="text-center pages_titles">Cet espace est réservé à l'auteur, merci de vous identifier.</h3>
 
     </div>
 
@@ -10,15 +10,18 @@
         <div class="alert alert-danger">{{ error.message }}</div>
     {% endif %}
 
+
     <form action="{{ path('login_check') }}" method="post">
-        <div class="col-sm-offset-1 col-sm-5">
+        <div class="form-group col-sm-offset-2 col-sm-5">
             <label class="col-sm-4" for="username">Login: </label>
-            <input class="col-sm-8" type="text" id="username" name="_username" value="{{ last_username }}"/>
-        <br/>
+            <input class="col-sm-8 form-control" type="text" id="username" name="_username" value="{{ last_username }}"/>
+        </div>
+        <div class="form-group col-sm-offset-2 col-sm-5">
             <label class="col-sm-4" for="password">Mot de passe: </label>
-            <input class="col-sm-8" type="password" id="password" name="_password"/>
-            {#<input type="hidden" name="_target_path" value="index_back">#}
-            <input class="btn btn-default col-sm-offset-4 col-sm-3" type="submit" value="Connexion"/>
+            <input class="col-sm-8 form-control" type="password" id="password" name="_password"/>
+        </div>
+        <div class="col-sm-offset-2 col-sm-5 text-center">
+            <input class="btn btn-delete" type="submit" value="Connexion"/>
         </div>
     </form>
 
