--- a/app/Resources/views/backLateral.html.twig
+++ b/app/Resources/views/backLateral.html.twig
@@ -9,15 +9,12 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
-
         <div class="collapse navbar-collapse" id="menu-navbar-collapse">
             <ul class="nav nav-pills nav-stacked">
-                {#<li><a href="{{ path('author_home_page') }}">Gérer les articles <span class="badge">{{ numberOfPublished }}</span></a></li>#}
-                <li><a href="{{ path('author_home_page') }}">Gérer les articles <span class="badge">en attente</span></a></li>
-                <li><a href="{{ path('add') }}">Ajouter un nouvel article</a></li>
-                {#<li><a href="{{ path('drafts') }}">Gérer les brouillons <span class="badge">{{ numberOfUnpublished }}</span></a></li>#}
-                <li><a href="{{ path('drafts') }}">Gérer les brouillons <span class="badge">en attente</span></a></li>
-                <li><a href="{{ path('moderate') }}">Modérer les commentaires</a></li>
+                <li><a href="{{ path('author_home_page') }}">Gérer les chapitres <span class="badge">{{ numberOfPublished }}</span></a></li>
+                <li><a href="{{ path('add') }}">Ajouter un nouveau chapitre</a></li>
+                <li><a href="{{ path('drafts') }}">Gérer les brouillons <span class="badge">{{ numberOfUnpublished }}</span></a></li>
+                <li><a href="{{ path('moderate') }}">Modérer les commentaires <span class="badge">{{ numberOfSignaled }}</span></a></li>
                 <li><a href="{{ path('logout') }}">Se déconnecter</a></li>
             </ul>
         </div>
