--- a/app/Resources/views/Author_home_page/index_author_home.html.twig
+++ b/app/Resources/views/Author_home_page/index_author_home.html.twig
@@ -21,6 +21,7 @@
                     <i class="glyphicon glyphicon-ban-circle"></i>
                 </a>
             </div>
+            {{ include(':Basics_Components:flashMessages.html.twig') }}
         </div>
     {% endfor %}
 
