--- a/app/Resources/views/Draft_copy/draft.html.twig
+++ b/app/Resources/views/Draft_copy/draft.html.twig
@@ -25,6 +25,7 @@
                     <i class="glyphicon glyphicon-check"></i>
                 </a>
             </div>
+            {{ include(':Basics_Components:flashMessages.html.twig') }}
         </div>
     {% endfor %}
 
