--- a/app/Resources/views/Article_management/update.html.twig
+++ b/app/Resources/views/Article_management/update.html.twig
@@ -1,26 +1,20 @@
 {% extends 'baseBlog.html.twig' %}
 
 {% block body %}
-<h4>Modification de l'article: {{ article.title }}</h4>
-
-    {% for label, messages in app.flashes %}
-        {% for message in messages %}
-            <div class="flash-{{ label }}">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endfor %}
+    <h4>Modification de l'article: {{ article.title }}</h4>
 
     {{ include(':Article_management:formTinyMCEPreRempli.html.twig') }}
-        
-        <div class="col-sm-12">
-            <input type="button" data-toggle="modal" data-target="#myModal" value="Mettre à jour"
-                class="btn btn-default pull-right"/>
-        </div>
 
-        {{ include(':Article_management:modalUpdate.html.twig') }}
+    <div class="col-sm-12">
+        <input type="button" data-toggle="modal" data-target="#myModal" value="Mettre à jour"
+               class="btn btn-default pull-right"/>
+    </div>
+
+    {{ include(':Article_management:modalUpdate.html.twig') }}
 
     {{ form_end(formView) }}
+
+    {{ include(':Basics_Components:flashMessages.html.twig') }}
 
     <div class="col-sm-12">
         <a href="{{ path('author_home_page') }}" class="btn btn-info pull-right">
