--- a/app/Resources/views/Article_reading/Macro/recursiveComments.html.twig
+++ b/app/Resources/views/Article_reading/Macro/recursiveComments.html.twig
@@ -7,9 +7,14 @@
                 <p class="col-sm-12"><strong>Publié le:</strong> {{ comment.publishedDate|date('d-m-Y') }}
                     <strong>Par:</strong> {{ comment.author }}</p>
                 <p class="col-sm-12">{{ comment.content }}</p>
-                <a id="comment_reply" class="btn btn-xs btn-delete pull-right">Répondre à ce commentaire</a>
-                <a href="{{ path('signal', {'id': comment.id}) }}" class="btn btn-xs btn-next pull-right" id="comment_{{ comment.id }}">Signaler ce
+                {% if level != 3 %}
+                    <a id="{{ comment.id }}" class="btn btn-xs btn-delete pull-right reply_button">Répondre à ce
+                        commentaire</a>
+                {% endif %}
+                <a href="{{ path('signal', {'id': comment.id}) }}" class="btn btn-xs btn-next pull-right"
+                   id="comment_{{ comment.id }}">Signaler ce
                     commentaire</a>
+                <div class="col-sm-12" id="comment_reply_container_{{ comment.id }}"></div>
             </div>
         </div>
 
