--- a/app/Resources/views/Comments/addComment.html.twig
+++ b/app/Resources/views/Comments/addComment.html.twig
@@ -1,5 +1,5 @@
-<div class="comment_form">
-    {{ form_start(formView, {'attr': {'class': 'form-horizontal', 'novalidate':'novalidate'}}) }}
+<div class="comment_form" id="comment_form">
+    {{ form_start(formView, {'action': path('add_comment', {'id' : article.id}), 'method': 'POST'}, {'attr': {'class': 'form-horizontal', 'novalidate':'novalidate'}}) }}
 
     <div class="form-group">
         <div class="col-sm-12">
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="col-sm-12" id="comment_buttons">
-        <a id="publish_comment" href="{{ path('add_comment', {'id': article.id}) }}" type="submit" class="btn btn-return pull-right">Publier</a>
+        <input id="publish_comment" type="submit" value="Publier" class="btn btn-return pull-right"/>
         <input id="cancel_comment" type="button" value="Annuler" class="btn btn-status pull-right"/>
     </div>
 
