--- a/app/Resources/views/Basics_Components/blogLateral.html.twig
+++ b/app/Resources/views/Basics_Components/blogLateral.html.twig
@@ -12,7 +12,7 @@
 
             <div class="collapse navbar-collapse" id="menu-navbar-collapse">
                 <ul class="nav nav-pills nav-stacked">
-                    <h3 class="pages_titles text-center">Chapitres précédents</h3>
+                    <h3 class="lateral_titles text-center">Chapitres précédents</h3>
                     {% for chapter in chaptersList %}
                     <li><a href="{{ path('visualization_article', {'id': chapter.id}) }}">
                         {{ chapter.title }} <p class="date_chapter pull-right">Créé le: {{ chapter.createdDate|date('d-m-Y') }}</p></a></li>
