--- a/app/Resources/views/Basics_Components/flashMessages.html.twig
+++ b/app/Resources/views/Basics_Components/flashMessages.html.twig
@@ -1,5 +1,5 @@
 <div class="col-sm-12">
-    {% for label, messages in app.session.flashbag %}
+    {% for label, messages in app.flashes %}
         {% for message in messages %}
             <div class="flash-{{ label }}">
                 {{ message }}
