--- a/app/Resources/views/baseBlog.html.twig
+++ b/app/Resources/views/baseBlog.html.twig
@@ -60,7 +60,7 @@
         {% endif %}
     </div>
     <div class="col-sm-9" id="content">
-        {{ include (':Basics_Components:flashMessages.html.twig') }}
+        {#{{ include (':Basics_Components:flashMessages.html.twig') }}#}
         {% block body %}
         {% endblock %}
     </div>
