correction insight suite

--- a/app/Resources/views/baseBlog.html.twig
+++ b/app/Resources/views/baseBlog.html.twig
@@ -17,6 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     {% endblock %}
+    <link rel="icon" type="image/png" href="{{ asset('images/avatarAuteur.png') }}"/>
 </head>
 
 
