--- a/app/Resources/views/Basics_Components/flashMessages.html.twig
+++ b/app/Resources/views/Basics_Components/flashMessages.html.twig
@@ -1,8 +1,8 @@
 <div class="col-sm-12">
-    {% for label, messages in app.flashes %}
-        {% for message in messages %}
-            <div class="flash-{{ label }}">
-                {{ message }}
+    {% for label, flashes in app.session.flashbag.all %}
+        {% for flash in flashes %}
+            <div class="alert alert-{{ label }}">
+                {{ flash }}
             </div>
         {% endfor %}
     {% endfor %}
